fix: fix overflow in RightDrawer (#862)

--- a/src/modules/70-pipeline/components/PipelineStudio/RightDrawer/RightDrawer.module.scss
+++ b/src/modules/70-pipeline/components/PipelineStudio/RightDrawer/RightDrawer.module.scss
@@ -1,5 +1,6 @@
 .main {
   transform: translateX(-60px);
+  overflow-y: auto;
 
   :global(.bp3-drawer-header) {
     margin: 0 var(--spacing-large);
