--- a/src/modules/70-pipeline/components/PipelineStudio/StepCommands/StepCommands.module.scss
+++ b/src/modules/70-pipeline/components/PipelineStudio/StepCommands/StepCommands.module.scss
@@ -6,7 +6,6 @@
 
 .step-command {
   height: 100%;
-  overflow-y: hidden;
 
   .step-tabs {
     overflow-y: auto;
